deploy/k8s/catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo-service
  namespace: conveniencia
  labels:
    app: catalogo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalogo-service
  template:
    metadata:
      labels:
        app: catalogo-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: catalogo-service
          image: conveniencia/catalogo-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: catalogo-service
  namespace: conveniencia
spec:
  selector:
    app: catalogo-service
  ports:
    - port: 8081
      targetPort: 8081
