deploy/k8s/vendas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendas-service
  namespace: conveniencia
  labels:
    app: vendas-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vendas-service
  template:
    metadata:
      labels:
        app: vendas-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8082"
    spec:
      containers:
        - name: vendas-service
          image: conveniencia/vendas-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vendas-service
  namespace: conveniencia
spec:
  selector:
    app: vendas-service
  ports:
    - port: 8082
      targetPort: 8082
